# biff

./: .gitignore  CMakeLists.txt  Makefile  README.md  ast.cpp  ast.h  bfopt  bfopt.cpp  biffc.cpp  biffc.h  codegen.cpp  codegen.h  comp_test.biff  comp_test.opt.biff  comp_test.txt  compexcept.cpp  compexcept.h  compiler.cpp  compiler.h  facorial.biff  factorial.biff  factorial.opt.biff  fizzbuzz.biff  flip.biff  flip.opt.biff  flip.txt  interpreter.cpp  ir.cpp  ir.h  ircompile  ircompile.cpp  irtest.cpp  lexer.cpp  lexer.h  neq_test.biff  neq_test.opt.biff  neq_test.txt  parse.cpp  parse.h  parser.cpp  (+4 more)
examples/: badbiff.biff  brainfuck.biff  fib.biff  functions.biff  input.biff  logical.biff  primes.biff  print_val.biff  sieve.biff  structs.biff  toupper.biff
tests/: comps.txt  div.txt  factorial.txt  macro.txt
